[package]
name = "esl-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "^1", features = ["full"] }
# tokio-util = { version = "^0.7", features = ["codec"] }
serde = { version = "^1", features = ["derive"] }
serde_json = "1"
log = "^0.4"
env_logger = "^0.10"
thiserror = "^1"
futures = { version = "^0.3"}
uuid = { version = "^1", features = ["v4"] }
strum = { version = "0.25", features = ["derive"] }
